GearsetPOC/force-app/main/default/objects/BSP_ACM__c/BSP_ACM__c.object-meta.xml
<CustomObject>
    <label>BSP ACM</label>
    <nameField>
        <displayFormat>ACM-{000000}</displayFormat>
        <label>BSP ACM Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSP ACMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>