GearsetPOC/force-app/main/default/objects/BSP_ACM__c/fields/ACM_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACM_Amount__c</fullName>
    <label>ACM Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>