GearsetPOC/force-app/main/default/objects/BSP_ACM__c/fields/ACM_Number__c.field-meta.xml
<CustomField>
    <fullName>ACM_Number__c</fullName>
    <label>ACM Nº</label>
    <type>TextArea</type>
</CustomField>