GearsetPOC/force-app/main/default/objects/BSP_ACM__c/fields/Locator_Reference_ACM__c.field-meta.xml
<CustomField>
    <fullName>Locator_Reference_ACM__c</fullName>
    <label>Locator Reference</label>
    <type>TextArea</type>
</CustomField>