GearsetPOC/force-app/main/default/objects/BSP_ACM__c/fields/Reason_for_ACM__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_ACM__c</fullName>
    <label>Reason for ACM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed Reissue</fullName>
            </value>
            <value>
                <fullName>Agent Error</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>