GearsetPOC/force-app/main/default/objects/BSP_ACM__c/fields/Related_to_case_ACM__c.field-meta.xml
<CustomField>
    <fullName>Related_to_case_ACM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BSP ACMs</relationshipLabel>
    <relationshipName>BSP_ACMs</relationshipName>
    <type>Lookup</type>
</CustomField>